--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,31 @@
-html, body, #root {
+/* Reset some basic styles */
+* {
   margin: 0;
   padding: 0;
-  min-height: 100%;
+  box-sizing: border-box;
+}
+
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #000;
+  color: #fff;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+  font-family: inherit;
 }
